# pydantic-claude-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  FEATURE_GAP_ANALYSIS.md  PR_DESCRIPTION.md  README.md  debug_preset.py  pyproject.toml  test_custom_and_websearch.py  test_phase2_3.py  test_websearch.py
.claude/: docs.md
benchmarks/: benchmark_custom_tools.py
docs/: README.md  architecture.md  comparison-with-pydantic-ai.md  conf.py  custom-tools-explained.md  custom-tools.md  experimental-deps.md  how-it-works.md  index.md  logging.md  user-guide.md
docs/internal/: MILESTONE-2-COMPLETE.md  README.md  SUCCESS-REPORT.md  custom-tools-technical-details.md  implementation-report-milestone-1.5.md  performance-report.md  technical-issues.md  test-coverage-report.md
examples/: basic_usage.py  custom_tools_advanced.py  custom_tools_basic.py  error_handling.py  experimental_deps_advanced.py  experimental_deps_basic.py  logfire_basic.py  logfire_with_custom_tools.py  model_settings.py  read_search_write.py  websearch_with_builtin_tools.py  websearch_with_preset.py
issues/: 001-feature-gap-analysis.md  002-modelsettings-support.md  003-usage-details.md  004-result-validator.md  005-model-level-retry.md  006-tool-error-handling.md  README.md  TEMPLATE.md  list.sh
src/pydantic_claude_cli/: __init__.py  builtin_tools.py  claude_code_cli_agent.py  deps_context.py  deps_support.py  emulated_run_context.py  exceptions.py  model.py  (+6 more)
tests/: test_claude_code_cli_agent.py  test_deps_context.py  test_deps_support.py  test_emulated_run_context.py  test_integration_custom_tools.py  test_model_settings.py  test_tool_converter.py  test_tool_support.py
(+3 files in other folders)
