[project]
name = "pydantic-claude-cli"
version = "0.1.0"
description = "Claude Code CLI adapter for Pydantic AI - enables API-key-free Claude model access via Claude Code CLI"
readme = "README.md"
authors = [
    { name = "driller", email = "eleshis@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=1.4.0",
    "claude-code-sdk>=0.0.25",
    "anyio>=4.11.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-mermaid>=1.0.0",
]
